--- a/Resume/index.html
+++ b/Resume/index.html
@@ -41,6 +41,7 @@ ul {
   list-style-position: outside;
   list-style-image: none;
   color :rgb(141, 141, 141);
+  font-size: 20px;
 }
 
 
@@ -49,7 +50,7 @@ ul {
 <body>
 
     <div style="background-color: #dddddd; margin-top: -7px;">
-    <h1> Resume </h1>
+    <h1 style="margin-top: 10px;"> Resume </h1>
 
     <hr>
 
@@ -177,6 +178,19 @@ ul {
     </p>
 
     <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/QXPWs00RD3A" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    <br />
+
+    <p style="background: rgb(185, 185, 185);font-weight: bold;font-size: 22px;"> Declaration
+    </p>
+
+    <p  style="font-size: 20px;text-justify: auto;">  I hereby declare that the above information is true to the best of my knowledge and belief. </p>
+
+    <br />
+    <br />
+    <div style="float: right;font-weight: bold;">
+    <p  style="font-size: 18px;text-justify: auto;text-align: center;">  Signature  <br/> <span style="margin-top: 10px;"> ( Abhishek Kulkarni ) </span> </p>
+    </div>
 
 
 </body>
