--- a/Business Website/index.html
+++ b/Business Website/index.html
@@ -186,11 +186,16 @@
         <footer>
             <div class="container">
                 <div class="row">
-                    <div class="col-4 d-inline-flex flex-row justify-content-center mx-auto"><a class="btn btn-outline-primary border rounded" role="button" style="background-color: rgba(254,209,54,0);" href="https://www.youtube.com/channel/UC3_I59Ms5TTFpO1zyxKZYWg"><i class="fab fa-youtube d-lg-flex justify-content-lg-center align-items-lg-center" style="color: #c4302b;font-size: 27px;"></i></a>
-                        <a
-                            class="btn btn-outline-primary border rounded" role="button" style="background-color: rgba(254,209,54,0);" href="https://www.facebook.com/5TechGteam/"><i class="fab fa-facebook-square d-lg-flex justify-content-lg-center align-items-lg-center" style="color: #3b5998;font-size: 27px;"></i></a><a class="btn btn-outline-primary border rounded" role="button" style="background-color: rgba(254,209,54,0);"
-                                href="https://twitter.com/5techgteam"><i class="fab fa-twitter-square d-lg-flex justify-content-lg-center align-items-lg-center" style="color: #00acee;font-size: 27px;"></i></a><a class="btn btn-outline-success text-success border rounded"
-                                role="button" style="background-color: rgba(254,209,54,0);" href="https://api.whatsapp.com/send?phone=+917028828831"><i class="fab fa-whatsapp-square d-lg-flex justify-content-lg-center align-items-lg-center" style="color: #25D366;font-size: 27px;"></i></a></div>
+                    <div class="col-4 d-inline-flex flex-row justify-content-center mx-auto"><a class="btn btn-outline-primary border rounded" role="button" style="background-color: rgba(254,209,54,0);" href="#"><i class="fab fa-youtube d-lg-flex justify-content-lg-center align-items-lg-center" style="color: #c4302b;font-size: 27px;"></i></a>
+                        <a class="btn btn-outline-primary border rounded" role="button" style="background-color: rgba(254,209,54,0);" href="#">
+                            <i class="fab fa-facebook-square d-lg-flex justify-content-lg-center align-items-lg-center" style="color: #3b5998;font-size: 27px;"></i>
+                        </a>
+                        
+                        <a class="btn btn-outline-primary border rounded" role="button" style="background-color: rgba(254,209,54,0);"
+                                href="#"><i class="fab fa-twitter-square d-lg-flex justify-content-lg-center align-items-lg-center" style="color: #00acee;font-size: 27px;"></i></a>
+                                
+                                <a class="btn btn-outline-success text-success border rounded"
+                                role="button" style="background-color: rgba(254,209,54,0);" href="#"><i class="fab fa-whatsapp-square d-lg-flex justify-content-lg-center align-items-lg-center" style="color: #25D366;font-size: 27px;"></i></a></div>
                 </div>
                 <!-- Start: Copyright -->
                 <p class="copyright" style="padding-top: 20px;">Copyright&nbsp;© 5TechG 2019<br></p>
